--- a/.luarc.json
+++ b/.luarc.json
@@ -2,5 +2,8 @@
 	"Lua.format.defaultConfig": {
 		"indent_style": "space",
 		"indent_size": "2"
-	}
+	},
+    "diagnostics.globals": [
+        "asdsd"
+    ]
 }
