--- a/.editorconfig
+++ b/.editorconfig
@@ -3,5 +3,8 @@ root = true
 [*]
 insert_final_newline = true
 indent_style = space
-indent_size = 2
+indent_size = 4
 charset = utf-8
+
+[*.{js,ts,lua,toml}]
+indent_size = 2
