--- a/snippets/package.json
+++ b/snippets/package.json
@@ -2,16 +2,8 @@
   "contributes": {
     "snippets": [
       {
-        "language": "lua",
-        "path": "./lua.json"
-      },
-      {
-        "language": "markdown",
-        "path": "./markdown.json"
-      },
-      {
-        "language": "toml",
-        "path": "./toml.json"
+        "language": "all",
+        "path": "./snippets.json"
       }
     ]
   },
